// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TemplateBuilder - Snapshot Tests with Real Templates > renderActionPrompt > should render action prompt with placeholder 1`] = `
"<div class="action-prompt" role="region" aria-label="Section interaction" id="action-prompt-experience" data-section-id="experience">
      <div class="typing-indicator" role="status" aria-live="polite">
        <span class="typing-dot"></span>
        <span class="typing-dot"></span>
        <span class="typing-dot"></span>
      </div>
      <button class="button prompt-button" aria-label="Submit prompt" data-default-text="Read next: Experience" data-section-id="experience">Read next: Experience</button>
    </div>"
`;

exports[`TemplateBuilder - Snapshot Tests with Real Templates > renderLoader > should render loader component 1`] = `
"<div class="loader" role="status" aria-live="polite">
      <div class="loader-spinner"></div>
    </div>"
`;

exports[`TemplateBuilder - Snapshot Tests with Real Templates > renderNavigationItem > should render navigation item with emoji icon 1`] = `
"<a href="#section-projects" class="nav-item" data-section-id="projects" role="menuitem" aria-label="Navigate to Projects" data-tooltip="Projects">
      <span class="nav-icon" aria-hidden="true">📁</span>
      <span class="nav-title" data-text="Projects"></span>
    </a>"
`;

exports[`TemplateBuilder - Snapshot Tests with Real Templates > renderNavigationItem > should render navigation item with fallback icon 1`] = `
"<a href="#section-contact" class="nav-item" data-section-id="contact" role="menuitem" aria-label="Navigate to Contact" data-tooltip="Contact">
      <span class="nav-icon" aria-hidden="true">📄</span>
      <span class="nav-title" data-text="Contact"></span>
    </a>"
`;

exports[`TemplateBuilder - Snapshot Tests with Real Templates > renderRoleChangeModal > should render role change modal with developer role disabled 1`] = `
"<div class="modal-overlay overlay" role="dialog" aria-modal="true" aria-labelledby="role-change-modal-title">
      <div class="modal-content role-change-modal">
        <button class="modal-content-close" aria-label="Close modal">
          <span aria-hidden="true">×</span>
        </button>

        <h3 id="role-change-modal-title" class="role-change-modal-title">Change Your Role</h3>
        <span class="role-change-modal-subtitle">Select a different perspective <br> to see other sides of my <span class="text-gradient">portfolio</span></span>

        <div class="role-change-modal-selection-grid">
          <button class="button button--recruiter" data-role="recruiter">
            <span class="button__description" data-role="recruiter-description">
              I'll focus on reliability, estimations, and delivery experience
            </span>
            <span class="button__title">Recruiter</span>
          </button>

          <button class="button button--developer" data-role="developer" disabled="">
            <span class="button__description" data-role="developer-description">
              I'll dive into the tech stack, architecture, and tools I used in my projects.
            </span>
            <span class="button__title">Engineer</span>
          </button>

          <button class="button button--friend" data-role="friend">
            <span class="button__description" data-role="friend-description">
              I'll introduce the human side of my self so you can understand what kind of person I am.
            </span>
            <span class="button__title">Friend</span>
          </button>
        </div>
      </div>
    </div>"
`;

exports[`TemplateBuilder - Snapshot Tests with Real Templates > renderRoleChangeModal > should render role change modal with friend role disabled 1`] = `
"<div class="modal-overlay overlay" role="dialog" aria-modal="true" aria-labelledby="role-change-modal-title">
      <div class="modal-content role-change-modal">
        <button class="modal-content-close" aria-label="Close modal">
          <span aria-hidden="true">×</span>
        </button>

        <h3 id="role-change-modal-title" class="role-change-modal-title">Change Your Role</h3>
        <span class="role-change-modal-subtitle">Select a different perspective <br> to see other sides of my <span class="text-gradient">portfolio</span></span>

        <div class="role-change-modal-selection-grid">
          <button class="button button--recruiter" data-role="recruiter">
            <span class="button__description" data-role="recruiter-description">
              I'll focus on reliability, estimations, and delivery experience
            </span>
            <span class="button__title">Recruiter</span>
          </button>

          <button class="button button--developer" data-role="developer">
            <span class="button__description" data-role="developer-description">
              I'll dive into the tech stack, architecture, and tools I used in my projects.
            </span>
            <span class="button__title">Engineer</span>
          </button>

          <button class="button button--friend" data-role="friend" disabled="">
            <span class="button__description" data-role="friend-description">
              I'll introduce the human side of my self so you can understand what kind of person I am.
            </span>
            <span class="button__title">Friend</span>
          </button>
        </div>
      </div>
    </div>"
`;

exports[`TemplateBuilder - Snapshot Tests with Real Templates > renderRoleChangeModal > should render role change modal with recruiter role disabled 1`] = `
"<div class="modal-overlay overlay" role="dialog" aria-modal="true" aria-labelledby="role-change-modal-title">
      <div class="modal-content role-change-modal">
        <button class="modal-content-close" aria-label="Close modal">
          <span aria-hidden="true">×</span>
        </button>

        <h3 id="role-change-modal-title" class="role-change-modal-title">Change Your Role</h3>
        <span class="role-change-modal-subtitle">Select a different perspective <br> to see other sides of my <span class="text-gradient">portfolio</span></span>

        <div class="role-change-modal-selection-grid">
          <button class="button button--recruiter" data-role="recruiter" disabled="">
            <span class="button__description" data-role="recruiter-description">
              I'll focus on reliability, estimations, and delivery experience
            </span>
            <span class="button__title">Recruiter</span>
          </button>

          <button class="button button--developer" data-role="developer">
            <span class="button__description" data-role="developer-description">
              I'll dive into the tech stack, architecture, and tools I used in my projects.
            </span>
            <span class="button__title">Engineer</span>
          </button>

          <button class="button button--friend" data-role="friend">
            <span class="button__description" data-role="friend-description">
              I'll introduce the human side of my self so you can understand what kind of person I am.
            </span>
            <span class="button__title">Friend</span>
          </button>
        </div>
      </div>
    </div>"
`;
